Add my other blogs to the landing page add more cells to the 80 days notebook

--- a/posts/calculating-80-days-from-now.ipynb
+++ b/posts/calculating-80-days-from-now.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bdbc60a38906ee2b2d0a8ada1bd7dc9ed264d48491432baa5e1c0ba975f8fdee"
+  "signature": "sha256:5215e5008ef2e6dbca69fe6e25543d77f81bf0da430323042fe1f97593aea875"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,7 +28,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -116,13 +116,43 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 14,
+       "prompt_number": 6,
        "text": [
         "'Sunday'"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 6
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "How many days are we into the project?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "today = datetime.date.today()\n",
+      "\n",
+      "day = (today-start).days\n",
+      "\n",
+      "print(\"Today is day %(day)d.  %(togo)d days to go.\" % dict(day=day, togo=(80-day)))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Today is day 33.  47 days to go.\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     }
    ],
    "metadata": {}
