--- a/posts/blades-and-sens-results-correlated.ipynb
+++ b/posts/blades-and-sens-results-correlated.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7c3ee3d7a54054f8b31c027d2eb9f3eccf99e4845bb2cd9d4e377a632d22601a"
+  "signature": "sha256:3df07b59c4be2ea51e1acddb351561c80158aef06ce0e69c3e941a96eaf713ae"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -10,7 +10,6 @@
    "cells": [
     {
      "cell_type": "markdown",
-     "metadata": {},
      "source": [
       "I have felt for a while that when the Blades win, the Sens also seem\n",
       "to do better.  When the Blades lose, the Sens don't do so well.\n",
@@ -45,7 +44,6 @@
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
      "source": [
       "Getting some data\n",
       "=================\n",
@@ -57,9 +55,50 @@
       "So first problem, getting the data.  I am planning to just get this season's results for both teams and extract the days when they both played, then take a look at how the results lined up.  \n",
       "\n"
      ]
+    },
+    {
+     "cell_type": "markdown",
+     "source": [
+      "Yesterday's games\n",
+      "=================\n",
+      "\n",
+      "The mighty Blades had a key game against local rivals Doncaster.  As\n",
+      "per usual, they did things the hard way, coming from behind twice to\n",
+      "end up winners 3-2.\n",
+      "\n",
+      "That is two big wins over local rivals in a matter of days.  The\n",
+      "Blades are now firmly in the playoff positions, one more win from the\n",
+      "last three games might be all that is needed.\n",
+      "\n",
+      "Another local side, Chesterfield, are looming large.  It feels like\n",
+      "they will play a part in the rest of our season.  I grew up on the\n",
+      "Chesterfield side of Sheffield, almost equidistant from the two\n",
+      "grounds.\n",
+      "\n",
+      "Meanwhile, the Senators were at home to the Pittsburgh Penguins last\n",
+      "night, in what really was a must win game.\n",
+      "\n",
+      "It was also fan appreciation night.  Within 10 seconds of the start\n",
+      "they were 1-0 down.  By 5 minutes in they were 2-0 down and by the end\n",
+      "of the first period it was 3-0.  Oh dear.  Sid Crosby on form and the\n",
+      "young Sens not firing.\n",
+      "\n",
+      "Second period was a different story.  Sens put the Penguins under\n",
+      "pressure, but nothing finding the net, until 5 minutes from the end of\n",
+      "the period.  Pageau managed to sneak one in off one of the Penguin's\n",
+      "skates.\n",
+      "\n",
+      "30 seconds into the third period they got a second.  Two minutes from\n",
+      "time they equalised and then Mark Stone fired in the winner in\n",
+      "overtime.\n",
+      "\n",
+      "Now that is what I call a fan appreciation night.\n",
+      "\n",
+      "Oh, and Blades and Sens both win on the same night, so that hypothesis\n",
+      "is proven ;)\n"
+     ]
     }
-   ],
-   "metadata": {}
+   ]
   }
  ]
 }
