first usable version

--- a/notebooks/hack-bermuda.ipynb
+++ b/notebooks/hack-bermuda.ipynb
@@ -12,13 +12,16 @@
     "Come Hack Bermuda\n",
     "=========\n",
     "\n",
-    "<img src=\"20141019_114619.jpg\" width=\"400\" height=\"300\">\n",
+    "<img src=\"galleries/HackBermuda/fishing.jpg\" width=\"600\" height=\"450\">\n",
     "\n",
     "**John Gill**\n",
     "\n",
     "<swfiua@gmail.com>"
    ]
   },
+
+
+
   {
    "cell_type": "markdown",
    "metadata": {
@@ -31,9 +34,26 @@
     "There is no snow!\n",
     "=========\n",
     "\n",
-    "<img src=\"20150107_124827.jpg\" width=\"400\" height=\"300\">"
+    "<img src=\"galleries/HackBermuda/snow.jpg\" width=\"600\" height=\"450\">"
    ]
-  },
+  }
+,
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Just pink sand and blue sky\n",
+    "=========\n",
+    "\n",
+    "<img src=\"galleries/HackBermuda/horseshoe.jpg\" width=\"600\" height=\"450\">"
+   ]
+  }
+,
   {
    "cell_type": "markdown",
    "metadata": {
@@ -44,148 +64,127 @@
    },
    "source": [
     "But there are hurricanes\n",
-    "=============\n",
+    "=========\n",
     "\n",
-    "<img src=\"gonzalo-modis-oct17.jpg\" width=\"400\" height=\"600\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Fay knocked this tree down\n",
-    "==============\n",
-    "\n",
-    "<img src=\"treedownfay.jpg\" width=\"600\" height=\"450\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "A week later, Gonzalo\n",
-    "===========\n",
-    "\n",
-    "<img src=\"20141018_091438.jpg\" width=\"600\" height=\"450\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "America's Cup in 2017\n",
-    "===========\n",
-    "\n",
-    "<img src=\"americascup.jpg\" width=\"600\" height=\"450\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Hackathon\n",
-    "=====\n",
-    "\n",
-    "\n",
-    "<img src=\"20140920_121434.jpg\" width=\"600\" height=\"450\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Pi-day @ Chewstick\n",
-    "==========\n",
-    "\n",
-    "<img src=\"piday.jpg\" width=\"600\" height=\"450\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<img src=\"piday3.jpg\" width=\"600\" height=\"450\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<img src=\"pi_day_pies.jpg\" width=\"600\" height=\"450\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Pink and blue Limo\n",
-    "==================\n",
-    "\n",
-    "<img src=\"pinkandbluelimo.jpg\" width=\"600\" height=\"450\">\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "http://127.0.0.1:8000/hack-bermuda.slides.html?theme=beige&transition=fade#/1\n",
-    "\n",
-    "<img src=\"20141206_114808.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"20141018_091438.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"mandela.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"gonzalo-modis-oct17.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"piday.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"20141019_114619.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"20141021_073556.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"20140920_121434.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"pi_day_pies.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"americascup.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"20141029_142539.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"20141206_092943.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"treedownfay.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"piday3.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"20150107_124827.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"20141105_152803.jpg\" width=\"600\" height=\"450\">\n",
-    "<img src=\"cricket.jpg\" width=\"600\" height=\"450\">\n"
+    "<img src=\"galleries/HackBermuda/gonzalo-modis-oct17.jpg\" width=\"450\" height=\"600\">"
    ]
   }
+,
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Gonzalo damage\n",
+    "=========\n",
+    "\n",
+    "<img src=\"galleries/HackBermuda/treedown.jpg\" width=\"600\" height=\"450\">"
+   ]
+  }
+,
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Stand me up again\n",
+    "=========\n",
+    "\n",
+    "<img src=\"galleries/HackBermuda/treeup.jpg\" width=\"450\" height=\"600\">"
+   ]
+  }
+,
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Raspberry pi day\n",
+    "=========\n",
+    "\n",
+    "<img src=\"galleries/HackBermuda/pi_day_pies.jpg\" width=\"600\" height=\"450\">"
+   ]
+  }
+,
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Chewstick\n",
+    "=========\n",
+    "\n",
+    "<img src=\"galleries/HackBermuda/mandela.jpg\" width=\"600\" height=\"450\">"
+   ]
+  }
+,
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "The Pink and Blue Limo\n",
+    "=========\n",
+    "\n",
+    "<img src=\"galleries/HackBermuda/pinkandbluelimo.jpg\" width=\"600\" height=\"450\">"
+   ]
+  }
+,
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "America's Cup 2017\n",
+    "=========\n",
+    "\n",
+    "<img src=\"galleries/HackBermuda/americascup.jpg\" width=\"600\" height=\"450\">"
+   ]
+  }
+,
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Come and hack in the sun\n",
+    "=========\n",
+    "\n",
+    "<img src=\"galleries/HackBermuda/fishing.jpg\" width=\"600\" height=\"450\">"
+   ]
+  }
+
+
+
+     
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
