Lightning talk tweaks and start of PyCon blog

--- a/notebooks/hack-bermuda.ipynb
+++ b/notebooks/hack-bermuda.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "Come Hack Bermuda\n",
+    "Open Bermuda\n",
     "=========\n",
     "\n",
     "<img src=\"galleries/HackBermuda/fishing.jpg\" width=\"600\" height=\"450\">\n",
@@ -114,7 +114,7 @@
     "Raspberry pi day\n",
     "=========\n",
     "\n",
-    "<img src=\"galleries/HackBermuda/pi_day_pies.jpg\" width=\"600\" height=\"450\">"
+    "<img src=\"galleries/HackBermuda/pi_day_pies.jpg\" width=\"450\" height=\"600\">"
    ]
   }
 ,
