--- a/posts/d-bermuda-pi.ipynb
+++ b/posts/d-bermuda-pi.ipynb
@@ -44,7 +44,7 @@
     "things.  At the same time, humanity and social systems are struggling\n",
     "to keep pace with this change.\n",
     "\n",
-    "[STEAM]() adds the Arts into STEM.  Making the Bermuda $\\pi$ a STEAM\n",
+    "[STEAM]() adds the Arts into STEM.  Making the Bermuda \\(\\pi\\) a STEAM\n",
     "powered event seems a natural choice, as the event can then embrace\n",
     "Bermudian culture in general.\n",
     "\n",
@@ -367,16 +367,6 @@
     "collapsed": true
    },
    "source": [
-    "## Trivia\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
     "### Chewstick"
    ]
   },
@@ -387,6 +377,15 @@
    },
    "source": [
     "### Everywhere!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Trivia\n"
    ]
   },
   {
