--- a/posts/d-bermuda-pi.ipynb
+++ b/posts/d-bermuda-pi.ipynb
@@ -421,7 +421,7 @@
     "\n",
     "# Bermuda $\\pi$ Number 1 = $-e^{i\\pi}$\n",
     "\n",
-    "Let's make in number one, every year.\n"
+    "Let's make it number one, every year.\n"
    ]
   }
  ],
