--- a/posts/d-bermuda-pi.ipynb
+++ b/posts/d-bermuda-pi.ipynb
@@ -385,7 +385,90 @@
     "collapsed": true
    },
    "source": [
-    "## Trivia\n"
+    "## Trivia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Around the world in 80 days\n",
+    "This blog started as a blog for an idea to create an *Around the world\n",
+    "in 80 days* idea, to run little competitions where people get miles\n",
+    "(or kilometers) for activities.  The idea is to see how far round the\n",
+    "world you can get in 80 days, with fun twists along the way.\n",
+    "One idea was to do an *Around Bermuda on Bermuda Bus and Ferry*\n",
+    "competition.  I learnt a lot on the project, but never quite got it\n",
+    "out of the door.  But that is another story.\n",
+    "\n",
+    "There is a version still limping along on heroku: https://tonzone80days.herokuapp.com/\n",
+    "\n",
+    "Kudos to heroku.  I have a half build project running there, haven't\n",
+    "checked it in ages and boom it springs into life.\n",
+    "\n",
+    "There are some other pieces coming together that might make the bus\n",
+    "thing viable in the near future, just needs a bit of time applied to\n",
+    "it.\n",
+    "\n",
+    "One thing that I found useful in the project was thinking in an 80 day\n",
+    "time horizon.  So I was curious about what date is 80 days before 10th\n",
+    "October 2015, the date for the start of the Bermuda $\\pi$.\n",
+    "\n",
+    "Hitting *Home* on the https://tonzone80days.herokuapp.com/ shows me this:\n",
+    "\n",
+    "Jun 29, 2015 is today's date\n",
+    "\n",
+    "Sep 17, 2015 is 80 days from today\n",
+    "\n",
+    "Apr 10, 2015 was 80 days ago\n",
+    "\n",
+    "So time for a little python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015-07-22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lets see what python says\n",
+    "import datetime\n",
+    "bermuda_pi_start = datetime.date(2015, 10, 10)\n",
+    "\n",
+    "eighty_days_before_start = bermuda_pi_start + datetime.timedelta(days=-80)\n",
+    "\n",
+    "print(eighty_days_before_start)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "So things need to get started on July 22nd 2015"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$2015^{{10}^2}$$"
    ]
   },
   {
