now with added Ubuntu

--- a/posts/sixty-seven-minutes.ipynb
+++ b/posts/sixty-seven-minutes.ipynb
@@ -88,6 +88,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mandela often spoke of Ubuntu:\n",
+    "\n",
+    "> Ubuntu does not mean that people should not enrich themselves. The\n",
+    "> question therefore is: Are you going to do so in order to enable the\n",
+    "> community around you to be able to improve?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "tags": [
